--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <p>
   <input #searchQuery
-         (keyup.enter)="onSearch(searchQuery.value)"
-         (blur)="onSearch(searchQuery.value)">
-  <button (click)="onSearch(searchQuery.value)">Find</button>
+         (keyup.enter)="onApplySearch(searchQuery.value)"
+         (blur)="onApplySearch(searchQuery.value)">
+  <button (click)="onApplySearch(searchQuery.value)">Find</button>
 </p>
