--- a/src/app/components/course-item/course-item.component.html
+++ b/src/app/components/course-item/course-item.component.html
@@ -3,5 +3,5 @@
     {{course.id}}, <b>{{course.title}}</b>, {{course.description}}, {{course.creatingDate | date: 'medium'}}
   </p>
   <button (click)="onDelete()">Delete</button>
-  <button (click)="onEdit()">Delete</button>
+  <button (click)="onEdit()">Edit</button>
 </div>
